--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Header -->
 <header>
     <div class="logo-container">
-        <img src="images/logo.png" alt="Company Logo" class="logo">
+        <img src="logo.png" alt="Company Logo" class="logo">
     </div>
     <nav>
         <a href="#home">Home</a>
@@ -37,10 +37,10 @@
 <section id="home" class="hero">
     <div class="slider">
         <div class="slide">
-            <img src="images/cyber1.jpg" alt="Cyber Security">
+            <img src="cyber1.jpg" alt="Cyber Security">
         </div>
         <div class="slide">
-            <img src="images/networking.jpg" alt="Networking">
+            <img src="networking.jpg" alt="Networking">
         </div>
     </div>
     <div class="hero-text">
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
